# orbithunter

./: .gitignore  .readthedocs.yaml  LICENSE  LICENSE.txt  MANIFEST.IN  README.md  README.rst  doc_requirements.txt  index.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tatus
.github/workflows/: python-app.yml
data/: AntisymmetricOrbitKS_L16p87_T24p39.h5  AntisymmetricTorus_L17p760_T19p626.h5  EquilibriumOrbitKS_L11p436.h5  OrbitKS_L42p007_T33p116.h5  README.md  README.rst  RelativeOrbitKS_L22p007_T53p924.h5  ShiftReflectionOrbitKS_L34p018_T129p401.h5  Torus_L24p983_T83p601.h5  Torus_L26p891_T30p801.h5  initial_Torus_L24p983_T83p601.h5  initial_Torus_L26p891_T30p801.h5  ppo_L34p01_T64p70.h5  reqva_L27p39.h5  rpo_L13p32_T8.h5  rpo_L22p00_T53p92.h5
data/examples/: OrbitKS_L26p744_T54p129.h5  OrbitKS_T54p129_L26p744.h5  glue_example0.h5
data/gluing/: OrbitKS_L34p853_T49p885.h5  OrbitKS_L35p012_T63p689.h5  OrbitKS_L35p328_T21p921.h5  OrbitKS_L37p051_T16p499.h5  OrbitKS_L38p052_T19p557.h5
data/logs/: refurbish_log.csv  symbolic_log.csv  symbolic_log_extra_space_padded.csv  symbolic_log_padded.csv  symbolic_log_rescaled.csv  symbolic_log_unpadded.csv
data/test_data/: AntisymmetricOrbitKS_L34p913_T51p540.h5  EquilibriumOrbitKS_L11p39.h5  OrbitKS_L31p245_T46p754.h5  OrbitKS_L37p297_T79p783.h5  RelativeEquilibriumOrbitKS_L28p810_T21p142.h5  RelativeOrbitKS_L27p526_T68p730.h5  ShiftReflectionOrbitKS_L28p847_T97p242.h5
data/tiles/: AntisymmetricOrbitKS_L17p593_T17p143.h5  AntisymmetricOrbitKS_T17p146_L17p590.h5  EquilibriumOrbitKS_L6p39.h5  EquilibriumOrbitKS_L6p43.h5  OrbitKS_merger.h5  OrbitKS_merger_comoving.h5  OrbitKS_merger_fdomain.h5  OrbitKS_merger_fdomain_shifted.h5  OrbitKS_merger_shifted.h5  OrbitKS_merger_shifted_fdomain.h5  OrbitKS_streak.h5  OrbitKS_streak_shifted.h5  OrbitKS_wiggle.h5  OrbitKS_wiggle_shifted.h5  RelativeOrbitKS_L13p026_T15p856.h5  RelativeOrbitKS_L13p026_T15p856_fdomain.h5  RelativeOrbitKS_T17p146_L13p019.h5
docs/: agenda.md  agenda.rst  bibliography.rst  conda_list.txt  conf.py  expanded_to_do_list.md  external.rst  extra_resources.rst  faq.rst  guide.rst  index.md  index.rst  install.rst  issues.md  issues.rst  license.rst  news.rst  orbithunter_beta.md  orbithunter_beta_v0.1.0.md  orbithunter_v0.0.md  orbithunter_v0.1.0.md  orbithunter_v0.2.0.md  orbithunter_v0.3.0.md  orbithunter_v0.4.0.md  patch_notes_alpha_0.0.1.md  patch_notes_alpha_0.1.0.md  patch_notes_alpha_0.2.0.md  patch_notes_alpha_0.2.1.md  patch_notes_alpha_0.4.0.md  patch_notes_alpha_0.5.0.md  patch_notes_alpha_0.7.0.md  patch_notes_alpha_0.9.2.md  patch_notes_beta_1.0.0.md  patch_notes_beta_1.1.0.md  patch_notes_beta_2.0.0.md  patch_notes_v0.0.1.md  patch_notes_v0.1.1.md  patch_notes_v0.2.0.md  patch_notes_v0.3.0.md  patch_notes_v0.6.0.md  (+5 more)
docs/changelog/: changelog-0.5.rst  changelog-0.5b1.rst  changelog-0.5b2.rst  changelog-0.5b3.rst  changelog-0.5rc1.rst  changelog-0.5rc2.rst  changelog-0.6.0.rst  changelog-0.6.1.rst  changelog-0.7.0dev.rst  changelog-0.7.rst  changelog-0.7b0.rst  changelog-1.0.1.rst  changelog-1.0.5.rst  changelog-1.0.6.rst  changelog-1.0.rst  changelog-1.1.2.rst  changelog-1.2.0.rst  changelog-1.2.1.rst  changelog-1.3.0.rst  changelog-1.3.1.rst  changelog-1.3.3.rst
docs/local/: crude_test_log.txt
docs/reference/: clipping.rst  continuation.rst  core.rst  glossary.rst  gluing.rst  gudhi.rst  index.rst  io.rst  machine_learning.rst  optimize.rst  persistent_homology.rst  shadowing.rst
docs/source/: conf.py  index.rst
examples/: glue_example1.h5
figs/: MNG_noise.ps  README.md
figs/tiles/: tile_data_description.md
notebooks/: README.md  Untitled.ipynb  clipping.ipynb  clipping_demo.ipynb  cnn.ipynb  cnn_data.ipynb  continuation.ipynb  continuation_demo.ipynb  continuous_families.ipynb  continuous_family_exploration.ipynb  convolutional_neural_network_demo.ipynb  convolutional_neural_networks.ipynb  covering.ipynb  demo.ipynb  developer_guide.ipynb  equation_module_creation.ipynb  fill.ipynb  fundamental_orbits.ipynb  generalization_to_henon_tutorial.ipynb  glue test.ipynb  gluing.ipynb  gluing_aspect_ratio_testing.ipynb  gluing_demo.ipynb  gudhi periodic cubical complex.ipynb  hunting.ipynb  hunting_demo.ipynb  implementing_an_equation_tutorial.ipynb  initial_condition_generation.ipynb  integration.ipynb  introduction.ipynb  introduction_and_hunting_demo.ipynb  large domain.ipynb  lorenz.ipynb  new_covering_algorithm.ipynb  numerical_efficiency_log.md  numerical_method_times.txt  orbit_cnn.ipynb  orbit_cnn_demo.ipynb  orbithunter_test.ipynb  pairwise_glue_testing.ipynb  (+11 more)
notebooks/data/: numerical_time_trials.csv
orbithunter/: __init__.py  _arrayops.py  _glue.py  arrayops.py  clipping.py  continuation.py  convolutional_neural_networks.py  core.py  discretization.py  expanded_to_do_list.md  generate.py  glue.py  gluing.py  homology.py  integrate.py  integration.py  io.py  machine_learning.py  optimize.py  orbit.py  orbit_ks.py  persistent_homology.py  physics.py  physics_ks.py  plotting.py  setup.py  shadowing.py  subdomain.py  test.py
orbithunter/henon/: __init__.py  orbits.py
orbithunter/ks/: __init__.py  arrayops.py  orbits.py  physics.py
orbithunter/kse/: __init__.py  orbits.py  physics.py
orbithunter/tests/: test_core.py  test_ks.py
requirements/: default.txt  developer.txt  docs.txt  extra.txt  full.txt  test.txt
scripts/: 00README.txt  GuBuCv17.py  benchmark_descent_method.py  continue.py  convergence_test.py  find.py  glue.py  hunt.py  integrate.py  playground.py  ppo_to_rpo.py  preprocess_tiles.py  process_tiles.py  refurbish.py  tile.py  tiling_example.py
scripts/local/: GuBuCv17.py  continue.py  convergence_test.py  glue.py  hunt.py  (+4 more)
template/: __init__.py  class_template.py
tests/: context.py  kse_test.py  test_advanced.py  test_basic.py  test_core.py  test_data.h5  test_ks.py  test_kse_pytest.py  tests_advanced.py  tests_basic.py
tutorial/: __init__.py  class_template.py  clipping.ipynb  continuation.ipynb  convolutional_neural_networks.ipynb  fundamental_orbits.ipynb  gluing.ipynb  tutorial.ipynb
(+807 files in other folders)
