[metadata]
name = orbithunter
version = 0.4.0
author = Matthew Gudorf
author_email = matthew.gudorf@gmail.com
description = Framework for solving spatiotemporal partial differential equations
long_description = file: README.md
long_description_content_type = markdown
url = 'https://mgudorf.github.io/orbithunter/'
project_urls={'Documentation': 'https://readthedocs.org/projects/orbithunter/',
    'Source': 'https://github.com/orbithunter/',
    'Tracker': 'https://github.com/orbithunter/docs/issues'}
packages=find_packages(include=['orbithunter'])
py_modules=['orbihunter.persistent_homology', orbithunter.machine_learning']
classifiers =
	'Development Status :: 4 - Beta'
	'Intended Audience :: Science/Research'
	'Topic :: Scientific/Engineering :: Physics'
    'Programming Language :: Python :: 3.7'
	'Programming Language :: Python :: 3.8'
	'Programming Language :: Python :: 3.9'
    'License :: OSI Approved :: MIT License'
    'Operating System :: Only tested on Windows 10'
keywords=
	'pde' 
	'partial differential equation'
 	'numeric'
	'numerical simulation'
 	'solver'
	'framework'
	'periodic orbit'
[options]
package_dir =
    = orbithunter
packages = orbithunter
install_requires = 
matplotlib>=3.1.3
numpy>=1.18.1
scipy>=1.4.1
pytest>=5.3.5
h5py>=2.10.0
hdf5>=1.10.4;
python_requires >=3.7

