[metadata]
name = orbithunter
version = 0.4b2
author = Matthew Gudorf
author_email = matthew.gudorf@gmail.com
description = Framework for solving spatiotemporal partial differential equations
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://mgudorf.github.io/orbithunter/"
project_urls={  # Optional
    "bug reports": "https://github.com/pypa/sampleproject/issues",
    "documentation": "https://readthedocs.org/projects/orbithunter/",
    "source": "https://github.com/orbithunter/",
    "tracker": "https://github.com/orbithunter/docs/issues",
    "home page": "https://mgudorf.github.io/orbithunter/",
    "tutorial": "https://github.com/mgudorf/orbithunter/tree/main/notebooks",
    "frequently asked questions" : "https://github.com/mgudorf/orbithunter/tree/main/docs/faq.md"
    }
classifiers =
    Development Status :: 4 - Beta,
    Intended Audience :: Science/Research,
    Topic :: Scientific/Engineering :: Physics,
    Programming Language :: Python :: 3,
    Programming Language :: Python :: 3.7,
    Programming Language :: Python :: 3.8,
    Programming Language :: Python :: 3.9,
    Programming Language :: Python :: 3 :: Only,
    License :: OSI Approved :: MIT License,
    Operating System :: Windows 10
keywords="pde","partial differential equation","numeric","numerical simulation","solver","framework","periodic orbit"

[options]
packages=find:
py_modules=
    persistent_homology
    machine_learning
    clipping
    continuation
    core
    gluing
    io
    optimize
    shadowing
install_requires = 
    matplotlib>=3.1.3
    numpy>=1.18.1
    scipy>=1.4.1
    h5py>=2.10.0
    pyqt5>=5.15.4 # matplotlib needs this or some other combination of QtPy even though it doesn't know it does.
    python_requires >=3.7
tests_require =
    pytest>=5.3.5
    pytest-datafiles>=2.0
setup_requires =
    setuptools>=40.6
[options.packages.find]
where=
    orbithunter
exclude=
    data
    notebooks
[aliases]
test=pytest
; [options.extras_require]
; persistent_homology=
;     gudhi>=3.3.0
;     pot>=0.7.0
; machine_learning=
;     scikit-learn>=0.22.1
;     tensorflow>=1.14.0


