[metadata]
name = orbithunter
version = 1.3.1
author = Matthew Gudorf
author_email = matthew.gudorf@gmail.com
description = Framework for Nonlinear Dynamics and Chaos
long_description = file: README.rst
long_description_content_type = text/x-rst
url = "https://orbithunter.readthedocs.io/en/latest/index.html"
project_urls={
        "bug reports": "https://orbithunter.readthedocs.io/en/latest/issues.html",
        "documentation": "https://orbithunter.readthedocs.io/en/latest/index.html",
        "source": "https://github.com/mgudorf/orbithunter/",
        "issue tracker": "https://github.com/orbithunter/docs/issues",
        "tutorial notebooks": "https://github.com/mgudorf/orbithunter/tree/main/tutorial",
        "development guide": "https://orbithunter.readthedocs.io/en/latest/guide.html",
        "frequently asked questions": "https://orbithunter.readthedocs.io/en/latest/faq.html",
    },
classifiers =
    Development Status :: 5 - Production/Stable,
    Intended Audience :: Science/Research,
    Topic :: Scientific/Engineering :: Physics,
    Programming Language :: Python :: 3,
    Programming Language :: Python :: 3.8,
    Programming Language :: Python :: 3.9,
    Programming Language :: Python :: 3.10,
    Programming Language :: Python :: 3.11,
    Programming Language :: Python :: 3 :: Only,
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Microsoft :: Windows :: Windows 10
keywords="pde","partial differential equation","numeric","numerical simulation","solver","framework","periodic orbit"
[options]
packages=find:
py_modules=
    persistent_homology
    machine_learning
    clipping
    continuation
    core
    gluing
    io
    optimize
    shadowing
install_requires =
    tqdm>=4.66.5
    joblib>=1.4.2
    matplotlib>=3.1.3
    numpy>=1.18.1
    scipy>=1.4.1
    h5py>=2.10.0
    pyqt5>=5.15.4 # matplotlib needs this or some other combination of QtPy even though it doesn't know it does.
    python_requires >=3.7
tests_require =
    pytest>=5.3.5
setup_requires =
    setuptools>=40.6
[options.packages.find]
where=
    orbithunter
exclude=
    data
    notebooks
    docs
    tests
    scripts
    requirements
[aliases]
test=pytest
[options.extras_require]
extra =
    ipython
    ipykernel>=5.1.4
    jupyterlab>=1.2.6
    gudhi>=3.3.0
    pot>=0.7.0
    scikit-learn>=0.24.1
    tensorflow>=1.14.0
developer=
    pytest>=5.3.5
    black>=19.10b0
full =
    ipython
    pytest>=5.3.5
    black>=19.10b1
    ipykernel>=5.1.4
    jupyterlab>=1.2.6
    gudhi>=3.3.0
    pot>=0.7.0
    scikit-learn>=0.24.1
    tensorflow>=1.14.0
docs =
    ipython
    sphinx>=3.5.2
    sphinxcontrib-log-cabinet>=1.0.1
    sphinx-issues>=1.2.0
    sphinx_rtd_theme>=0.5.1
    sphinx-gallery>=0.8.2
    numpydoc>=1.1
    pillow>=8.0
    nb2plots>=0.6
    texext>=0.6.6
